# Space-Dance

./: .gitignore  CMakeLists.txt  LICENSE  README.md  makefile
Src/: Essentials.h  gameLoop.h  main.c  menu.c  menu.h
build.6/.cmake/api/v1/reply/: cache-v2-5aee6c33d8cff2116cad.json  cmakeFiles-v1-f17dbb4f38db742601e4.json  codemodel-v2-8188af583466045e11fc.json  index-2024-10-24T08-55-08-0927.json  target-Space-Dance-Debug-62ac73dc3a60a743b994.json  target-run-Debug-22c975fa0ca1f90fcc52.json
cmake/: FindSDL2.cmake  FindSDL2_mixer.cmake  FindSDL2_ttf.cmake
include/: essentials.h  gameLoop.h
src/: essentials.h  gameLoop.c  gameLoop.h  main.c  menu.c  menu.h
src/components/: gameLoop.h  menu.h
